# AI_HUB-python-backend

./: Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  tox.ini
.github/: production_deployment.yml
.github/workflows/: test.yml  tests.yml
HW1/: error.py  math.py  requirements.txt  serv.py
HW2/: main.py
HW2/entities/: Cart.py  Item.py
HW2/routers/: quaries.py
grafana-data/: grafana.db
hw_2/: main.py
hw_2/entities/: Cart.py  Item_cart.py
hw_2/routers/: quaries.py
hw_4/demo_service/api/: contracts.py  main.py  users.py  utils.py
hw_4/demo_service/core/: users.py
tests/: test_homework_2.py
tests/lecture_4/hw/: test_homework_4.py
